--- a/todo-static/index.html
+++ b/todo-static/index.html
@@ -3,4 +3,8 @@
     <head>
         <title>todonow </title>
     </head>
+    <body>
+        <H1>My list</H1>
+        <ul> <li> study for Ap Psych Exam,work on U.S History project, finish U.S history questions, and Study for trig</li></ul>
+    </body>
 </html>
