added input fields

--- a/todo-static/index.html
+++ b/todo-static/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>todonow </title>
+        <title>todonow </title> 
+        <link src="styles.css" />
     </head>
     <body>
         <H1>My list</H1>
-        <ul> <li> study for Ap Psych Exam,work on U.S History project, finish U.S history questions, and Study for trig</li></ul>
+        <ul> <li>
+            <input type="checkbox" />
+            study for Ap Psych Exam
+            <li>
+                <input type="checkbox" />finish u.s. hsitory questions</li>
+            <li> <input type="checkbox" />study for trig</li></li>
+        </ul>
     </body>
 </html>
