--- a/todo-static/index.html
+++ b/todo-static/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>todonow </title> 
-        <link rel="sylesheet" href="index.scss"/>
+        <link rel="stylesheet" href="index.scss" />
     </head>
     <body>
         <H1>My list</H1>
@@ -20,7 +20,7 @@
         <input type="text" placeholder="task info"/>
         <input type="number" placeholder="enter"/> 
         <Input type="number" placeholder="time interval"/>
-      <input type=submit value="add todo" id="add-new-todo" /> 
+      <input type=submit value="add todo" id="add-new-todo-button" /> 
      
     </body>
 </html>
