--- a/todo-static/show.html
+++ b/todo-static/show.html
@@ -1,11 +1,15 @@
 <html>
 <head>
-<title></title>
+<title>
+</title>
+
 </head>
 <body> 
 <input type="checkbox"> 
 <h2>Make the curriculum 4 pomodoros</h2>
-<a href="#">Edit</a>
+<a href="#">Edit
+
+</a>
 <a href="#">Delete</a>
 <a href="index.html">Go back...</a>
 </body>
